CSS/stylesheet.css
/*
COLOURS:
	Light Green: #ADE3C2;
	Dark Green: #6D987D;
	Dark Grey Font: #333333;
	#cacaca
*/

body {
	background-color: #AAA !important;
	font-size: 20px !important;
	font-weight: 200 !important;
	background-image: url("../images/mainBackground.jpg");
    background-attachment: fixed;
    background-position: center;
    background-repeat: repeat;
	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
}

h1 {
	margin-bottom: .75em !important;
}

h2 {
	font-weight: 100 !important;
	margin-bottom: .75em !important;
}

h3 {
	font-weight: 500 !important;
	margin-bottom: .75em !important;
}

h4 { font-weight: 100 !important; }

h5 { 	
	font-style: italic;
	font-weight: 100 !important;
	font-size: 1em !important; 
}

hr {
	margin-bottom: 1.5em !important;
	margin-top: 1.5em !important;
}

.hero {
	background-color: #ff5722;
	min-height: 100vh;
	color: #fff !important;
	z-index: 5000;
	opacity: 0.8;
}

#site-title {
	padding-top: 10px;
	position: fixed;
	display: inline-block;
	font-size: 4em;
	opacity: 0;
	transition: opacity 2s;
}

#site-links {
	padding-top: 10px;
	position: fixed;
	display: inline-block;
	font-size: 1em;
	opacity: 0;
	transition: opacity 1.5s;

}

#site-links a {
	color: #cacaca !important;
	transition: color .5s ease;
}

.fixed-navbar {
	background-color: #ff5722;
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	height: 50px;
	z-index: 5000;
	color: #fff !important;
}

.fixed-navbar #site-links a {
	color: #fff !important;
}

.carousel-inner{
  width:100%;
  height: 800px !important;
  max-height: 40vw !important;
}

#v0{
  position: fixed;
  right: 0; 
  bottom: 0;
  min-width: 100%; 
  min-height: 100%;
  z-index: -100;
}

.margin-sm { margin: 5px; }


li > a {
	color: #fff !important;
	-webkit-transition: opacity .15s ease-in-out;
    transition: opacity .15s ease-in-out;

}

li > a:hover, li.active > a {
	opacity: .6;
	text-decoration: none;

}

.divider {
	margin-top: 30px;
	margin-bottom: 30px;
	height: 100px;
	width: 100%;
}

.footer {
	padding-top: 50px;
	padding-bottom: 50px;
	color: #BBB;
	text-align: center;
	background-color: #333;
	border-top: 20px solid #777;
	font-weight: 200;
}

a { color: #666 !important; }

a:hover {
	text-decoration: none !important;
	opacity: .7;
}

@media screen and (max-width: 480px) {
    body {
    	font-size: 14px !important;
    }
}



/* ------------------------------------------ */
/* Sections */
/* ------------------------------------------ */

.background-section {
	min-height: 20vh;
	background-position: 50% 50%;
	background-repeat: no-repeat;
	background-attachment: fixed;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}

.title-box {
	background: transparent;
	color: #FFF;
	text-align: center;
	font-size: 3.5em;
	font-weight: 100;
	opacity: 0.7;

	-webkit-transition: color 2s, opacity 2s, font-size 2s;
       -moz-transition: color 2s, opacity 2s, font-size 2s;
         -o-transition: color 2s, opacity 2s, font-size 2s;
            transition: color 2s, opacity 2s, font-size 2s;
}

/*.bg-skill {
	background-image: url("../images/bg1.jpg");
	background-size: repeat;
}
.bg-project {
	background-image: url("../images/bg2.jpg");
	background-size: cover;
}
.bg-contact{
	background-image: url("../images/bg3.jpg");
	background-size: cover;
}
*/
.foreground-box {
	width: 100wv;
	padding-top: 50px;
	padding-bottom: 10%;
	background-color: #ffffff !important;
	z-index: 2000;
	border-top: 1px solid #CCC;
	border-bottom: 1px solid #CCC;
}

.foreground-box p {
	text-align: center;
}

